syntax = "proto3";

package v1.manager.management;

option go_package = "github.com/megakuul/zen/pkg/api/v1/manager/management";

import "v1/manager/user.proto";

message GetRequest { }

message GetResponse {
  User user = 1;
}

message UpsertRequest {
  string verifier = 1;
  User user = 2;
}

message UpsertResponse { }

message DeleteRequest { }

message DeleteResponse { }

service ManagementService {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Upsert(UpsertRequest) returns (UpsertResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
