syntax = "proto3";

package v1.scheduler.timing;

option go_package = "github.com/megakuul/zen/pkg/api/v1/scheduler/timing";

import "v1/scheduler/event.proto";

message StartRequest {
  string id = 1;
  int64 start_time = 2;
}

message StartResponse {
}

message StopRequest {
  string id = 1;
  int64 stop_time = 2;
}

message StopResponse {
}

service TimingService {
  rpc Start(StartRequest) returns (StartResponse) {}
  rpc Stop(StopRequest) returns (StopResponse) {}
}
